[package]
name = "firebase-auth"
version = "0.5.0"
authors = ["Chop Tr <m@chop.dev>"]
homepage = "https://github.com/trchopan/firebase-auth"
repository = "https://github.com/trchopan/firebase-auth.git"
documentation = "https://docs.rs/firebase-auth"
description = "Firebase authentication extractor for Actix Web and Axum"
keywords = ["firebase", "actix", "web", "framework", "authentication"]
categories = ["web-programming::http-server"]
license = "MIT"
edition = "2021"
readme = "../README.md"

[lib]
name = "firebase_auth"
path = "src/lib.rs"

[features]
default = ["actix-web", "axum"]
actix-web = ["dep:actix-web", "dep:actix-web-httpauth"]
axum = ["dep:axum"]

[dependencies]
actix-web = { version = "4", optional = true }
actix-web-httpauth = { version = "0.8.0", optional = true }
axum = { version = "0.8", optional = true }
tokio = { version = "1.33.0", features = ["macros", "rt", "rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
jsonwebtoken = "9.1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
base64 = "0.22.1"
