[package]
name = "example-axum-custom-claims"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
firebase-auth = { path = "../../firebase-auth" }
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace"] }
tracing = "0.1"
serde = "1.0"
serde_json = "1.0"
